--- a/style.css
+++ b/style.css
@@ -1,3 +1,60 @@
 body {
     background-color: #50586C;
-}  
+} 
+
+a {
+    box-sizing: border-box;
+    display: block;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border: solid 6px #000;
+    border-radius: 50%;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 16%);
+}
+
+a:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    background-color: #000;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0, 0);
+    transition: transform ease 0.4s;
+}
+
+a:hover:after {
+    transform: translate(-50%, -50%) scale(1.1, 1.1);
+}
+
+a:before {
+    content: "";
+    position: absolute;
+    z-index: 10;
+    top: 55%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    border-style: solid;
+    border-color: #000;
+    border-width: 6px 0 0 6px;
+    transform: translate(-50%, -50%) rotate(45deg);
+    transition: border-color ease 0.1s;
+}
+
+a:hover:before {
+    border-color: #fff;
+}
+
+  /****** Base style. ******/
+body {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
