--- a/style.css
+++ b/style.css
@@ -1,41 +1,46 @@
 body {
     background-color: #50586C;
-} 
+    height: 100%;
+}
 
 a {
-  display: block;
-  width: 300px;
-  padding: 20px 0;
-  border-radius: 6px;
-  background-repeat: no-repeat;
-  background-position: 100% 0;
-  background-size: 200% auto;
-  background-image: linear-gradient(
-    to right,
-    #a48c61 0%,
-    #a48c61 50%,
-    #000000 50%,
-    #000000 100%
-  );
-  box-shadow: 0 3px 10px rgb(0 0 0 / 16%);
-  transition: background-position ease 0.4s;
-  text-align: center;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 20px;
+    box-sizing: border-box;
+    display: block;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border: solid 6px #000;
+    border-radius: 50%;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 16%);
 }
 
-a:hover {
-  background-position: 0 0;
+a:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    background-color: #000;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0, 0);
+    transition: transform ease 0.4s;
 }
 
-/****** Base style. ******/
-body {
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  font-family: "Yu Gothic Medium", "游ゴシック Medium", "Yu Gothic", "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo";
+a:hover:after {
+    transform: translate(-50%, -50%) scale(1.1, 1.1);
+}
+
+a:before {
+    content: "";
+    position: absolute;
+    z-index: 10;
+    top: 55%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    border-style: solid;
+    border-color: #000;
+    border-width: 6px 0 0 6px;
 }
