--- a/style.css
+++ b/style.css
@@ -3,8 +3,14 @@ body {
     height: 100%;
 }
 
-h1 {
-    display: flex;
+.container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+    h1 {
+    text-align: center;
 }
 
 img {
