--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,24 +24,49 @@ li {
 }
 
 .main {
-  /* 上下のpaddingを100px、左右のpaddingを80pxにしてください */
   padding: 100px 80px;
-  
 }
 
-/* copy-containerの中のh1のfont-sizeを指定してください */
 .copy-container h1 {
   font-size: 140px;
 }
 
-/* copy-containerの中のh2のfont-sizeを指定してください */
 .copy-container h2 {
   font-size: 60px;
 }
 
-/* copy-containerの中のspanの色を指定してください */
-.copy-container span {
-  color: #ff4a4a;
+.contents {
+  height: 500px;
+  /* margin-topを100pxにしてください */
+  margin-top: 100px;
+  
+  
+}
+
+.section-title {
+  border-bottom: 2px solid #dee7ec;
+  /* font-sizeを28pxにしてください */
+  font-size: 28px;
+  
+  /* padding-bottomを15pxにしてください */
+  padding-bottom: 15px;
+  
+  /* margin-bottomを50pxにしてください */
+  margin-bottom: 50px;
+  
+}
+
+.contents-item {
+  float: left;
+  /* margin-rightを40pxにしてください */
+  margin-right: 40px;
+  
+}
+
+/* contents-itemの中のp要素のfont-size、margin-topを指定してください */
+.contents-item p {
+  font-size: 24px;
+  margin-top: 30px;
 }
 
 .footer {
@@ -62,4 +87,10 @@ li {
 
 .footer-list li {
   padding-bottom: 20px;
+}
+
+.contents-item img {
+  object-fit: cover;
+  width: 400px;
+  height: 300px;
 }
